List vers Deque